--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
     sdk: flutter
   go_router: ^15.1.2
   google_fonts: ^6.2.1
+  firebase_auth: ^4.6.0
+  provider: ^6.0.5
+  cloud_firestore: 4.17.5
 
 dev_dependencies:
   flutter_lints: ^5.0.0
