--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   go_router: ^15.1.2
   google_fonts: ^6.2.1
   provider: ^6.0.5
+  firebase_core: ^3.13.0
+  firebase_auth: ^5.5.3
+  cloud_firestore: ^5.6.7
 
 dev_dependencies:
   flutter_lints: ^5.0.0
