--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,16 @@ dependencies:
   firebase_auth: ^5.5.3
   cloud_firestore: ^5.6.7
   intl: ^0.20.2
+  shared_preferences: ^2.2.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
